remove cookies.
remove cookie filter and implement simple JWT procedure.